# monovgatext

./: CMakeLists.txt  README.md  setup.sh
fpga/: .gitignore  Makefile  MonoVgaText.pcf  create_screen.py  font.mem  font16.mem  memory.v  screen.mem  screen16.mem  top.v
rtl/: MasterShell.v  MonoVgaText.v
rtl/import/: UartMaster.v
sim/: IBM_VGA_8x16.c  IBM_VGA_8x16.h  Makefile  sim.cpp  uart.cpp  uart.h  vga.cpp  vga.h
